// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`The scene works as expected 1`] = `
<div>
  <div>
    <button
      type="button"
    >
      false
    </button>
  </div>
</div>
`;

exports[`The scene works as expected 2`] = `
<div>
  <div>
    <button
      type="button"
    >
      true
    </button>
  </div>
</div>
`;

exports[`The scene works as expected 3`] = `
<div>
  <div>
    <button
      type="button"
    >
      false
    </button>
  </div>
</div>
`;
